--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -4,7 +4,7 @@
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item
         android:id="@+id/add_contact"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/ic_add_circle_outline_white_48dp"
         android:title="Add contacts"
         app:showAsAction="ifRoom"/>
 
