--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="48dp"
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="24dp"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/bt_round"
                 android:elevation="2dp"
                 android:text="Sign Up"
                 android:textColor="#FFF" />
