--- a/app/src/main/res/layout/content_reports.xml
+++ b/app/src/main/res/layout/content_reports.xml
@@ -5,12 +5,15 @@
     android:id="@+id/content_reports"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.infiny.tracker_master.Activities.Reports"
     tools:showIn="@layout/activity_reports">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvLogHourList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        app:layoutManager="LinearLayoutManager" />
 
 </RelativeLayout>
