--- a/app/src/main/res/layout/content_add_target.xml
+++ b/app/src/main/res/layout/content_add_target.xml
@@ -34,8 +34,9 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:src="@drawable/con"
-                    app:civ_border_color="#FFF"
-                    app:civ_border_width="2dp" />
+                    android:padding="10dp"
+                    app:civ_border_color="@android:color/white"
+                    app:civ_border_width="1dp" />
 
             </LinearLayout>
 
