--- a/app/src/main/res/layout/content_reports.xml
+++ b/app/src/main/res/layout/content_reports.xml
@@ -16,4 +16,13 @@
         android:layout_centerHorizontal="true"
         app:layoutManager="LinearLayoutManager" />
 
+    <TextView
+        android:text="No data found"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:id="@+id/tvNoData" />
+
 </RelativeLayout>
