--- a/app/src/main/res/layout/report_item.xml
+++ b/app/src/main/res/layout/report_item.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="24dp"
+            android:layout_marginLeft="16dp"
             android:gravity="center"
             android:padding="16dp"
             android:text="1 January 2017"
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/tvHours"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
@@ -31,9 +31,9 @@
             android:background="@drawable/drawable_online"
             android:gravity="center"
             android:padding="4dp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:text="23.00 hrs."
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:text="24 Hours 30 Minutes"
             android:textColor="#ffffff" />
     </RelativeLayout>
 
