--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/colorPrimary"
-        android:gravity="center">
+        android:gravity="center"
+        android:elevation="4dp">
 
         <android.support.v7.widget.SearchView
             android:id="@+id/search_box"
