--- a/app/src/main/res/layout/date_select_fragment.xml
+++ b/app/src/main/res/layout/date_select_fragment.xml
@@ -2,19 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="#f5f5f5">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="24dp">
+            android:layout_marginTop="24dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvFromDate"
@@ -23,6 +26,7 @@
                 android:layout_margin="16dp"
                 android:layout_weight="1"
                 android:background="#FFF"
+                android:elevation="4dp"
                 android:gravity="center"
                 android:hint="From Date"
                 android:padding="10dp" />
@@ -34,6 +38,7 @@
                 android:layout_margin="16dp"
                 android:layout_weight="1"
                 android:background="#FFF"
+                android:elevation="4dp"
                 android:gravity="center"
                 android:hint="To Date"
                 android:padding="10dp" />
@@ -51,8 +56,8 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/bt_round"
             android:text="Submit"
-            android:textColor="#FFF"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:textColor="#FFF" />
 
     </LinearLayout>
 
