--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -5,9 +5,14 @@
     <item
         android:id="@+id/add_contact"
         android:icon="@drawable/ic_add_circle_outline_white_48dp"
-        android:title="Add contacts"
-        app:showAsAction="ifRoom"/>
+        android:title="Add Target"
+        app:showAsAction="always"/>
 
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_logout"
+        android:title="Logout"
+        app:showAsAction="always"/>
 
 
 </menu>
