--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -38,8 +38,7 @@
             android:id="@+id/rvTargetList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            app:layoutManager="LinearLayoutManager" />
+            android:layout_centerHorizontal="true" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
