--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -24,9 +24,9 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginTop="10dp"
                 android:theme="@style/TextLabel">
 
                 <EditText
@@ -35,7 +35,6 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Email"
-                    android:text="test@test.com"
                     android:inputType="textEmailAddress"
                     android:maxLines="1" />
 
@@ -45,9 +44,9 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
                 android:theme="@style/TextLabel">
 
                 <EditText
@@ -56,7 +55,6 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Password"
-                    android:text="12345678"
                     android:inputType="textPassword"
                     android:maxLines="1" />
 
@@ -66,21 +64,21 @@
                 android:id="@+id/btSignIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign In"
-                android:textColor="#fff"
-                android:background="@drawable/bt_round"
-                android:layout_marginTop="24dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:textAllCaps="false" />
+                android:layout_marginTop="24dp"
+                android:background="@drawable/bt_round"
+                android:text="Sign In"
+                android:textAllCaps="false"
+                android:textColor="#fff" />
 
             <TextView
                 android:id="@+id/tvSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="36dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="36dp"
+                android:layout_marginTop="24dp"
                 android:text="Create Account" />
 
         </LinearLayout>
