--- a/app/src/main/res/layout/content_add_target.xml
+++ b/app/src/main/res/layout/content_add_target.xml
@@ -19,26 +19,34 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:gravity="center"
                 android:background="@drawable/gradient"
                 android:scaleType="fitCenter">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivProfilePic"
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/con"
-                    android:padding="10dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:src="@drawable/ic_person_white_48dp"
                     app:civ_border_color="@android:color/white"
-                    app:civ_border_width="1dp" />
+                    app:civ_border_width="1dp"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
 
-            </LinearLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ivEdit"
+                    android:src="@drawable/ic_mode_edit_white_36dp"
+                    android:layout_alignTop="@+id/ivProfilePic"
+                    android:layout_alignBaseline="@+id/ivProfilePic"
+                    android:layout_alignStart="@+id/ivProfilePic"
+                    android:layout_marginStart="90dp"/>
+
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/linearLayout"
