--- a/app/src/main/res/layout/content_target_details.xml
+++ b/app/src/main/res/layout/content_target_details.xml
@@ -10,10 +10,6 @@
     tools:context="com.example.infiny.tracker_master.Activities.TargetDetails"
     tools:showIn="@layout/activity_target_details">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,23 +26,47 @@
                 android:background="#FFF"
                 android:elevation="4dp">
 
-                <RelativeLayout
-                    android:id="@+id/rl"
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/ivProfileImage"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="27dp"
+                    android:elevation="4dp"
+                    android:src="@drawable/profile" />
+
+                <TextView
+                    android:id="@+id/tvName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#90000000">
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignStart="@+id/tvStatus"
+                    android:layout_alignTop="@+id/ivProfileImage"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:enabled="false"
+                    android:maxLines="1"
+                    android:text="John Doe"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#000" />
 
-                    <ImageView
-                        android:id="@+id/ivBackground"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:scaleType="center"
-                        android:tint="#90000000"
-                        app:srcCompat="@drawable/profile" />
-
-                </RelativeLayout>
+                <TextView
+                    android:id="@+id/tvStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_toEndOf="@+id/ivProfileImage"
+                    android:maxLines="1"
+                    android:text="Online Now"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textColor="#000"
+                    android:layout_below="@+id/tvName" />
 
 
                 <LinearLayout
@@ -55,110 +75,82 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/ivProfileImage"
-                    android:layout_marginTop="11dp"
+                    android:layout_marginTop="24dp"
                     android:orientation="vertical">
 
-                    <TextView
+                    <View
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="10dp"
-                        android:text="First Name" />
-
-                    <TextView
-                        android:id="@+id/tvFirstName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="10dp"
-                        android:enabled="false"
-                        android:maxLines="1"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textColor="#000" />
+                        android:layout_height="1dp"
+                        android:background="#E0E0E0" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Last Name" />
-
-                    <TextView
-                        android:id="@+id/tvLastName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="10dp"
-                        android:maxLines="1"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textColor="#000" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
+                        android:layout_marginTop="24dp"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                         android:text="Email Id" />
 
                     <TextView
                         android:id="@+id/tvEmail"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="24dp"
                         android:enabled="false"
                         android:maxLines="1"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:text="test@test.com"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textColor="#000" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#E0E0E0" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Mobile Number" />
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
+                        android:layout_marginTop="24dp"
+                        android:text="Mobile Number"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
 
                     <TextView
                         android:id="@+id/tvPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginBottom="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
                         android:enabled="false"
                         android:maxLines="1"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:text="1234567890"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textColor="#000" />
 
-                </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#E0E0E0" />
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/ivProfileImage"
-                    android:layout_width="96dp"
-                    android:layout_height="96dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="150dp"
-                    android:elevation="4dp"
-                    android:src="@drawable/profile" />
+                </LinearLayout>
 
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/rlReports"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="72dp"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="center"
                 android:background="#FFF"
+                android:layout_marginBottom="8dp"
                 android:elevation="4dp">
 
                 <TextView
@@ -168,12 +160,33 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:gravity="center"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                     android:text="Reports" />
 
             </RelativeLayout>
 
-        </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/rlTrack"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:background="#FFF"
+                android:elevation="4dp">
 
-    </ScrollView>
+                <TextView
+                    android:id="@+id/tvTrack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:text="Track Now" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
 </LinearLayout>
